Fix a z-index issue with the network selection menu

--- a/apps/block_scout_web/assets/css/components/_navbar.scss
+++ b/apps/block_scout_web/assets/css/components/_navbar.scss
@@ -1,6 +1,6 @@
 .navbar {
   position: relative;
-  z-index: 10;
+  z-index: 100;
 
   &-primary {
     background-color: $primary;
